<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@color/BWPrimaryDark"
    android:gravity="center|top"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/city_name_txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="City name"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/BWPrimaryDark"
        android:elevation="2dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/weather_img_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            android:layout_weight="5"
            android:contentDescription="@string/weather_icon_description"
            android:src="@drawable/snow_light" />

        <TextView
            android:id="@+id/temperature_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="20 C"
            android:textSize="50sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/description_txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Description"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/date_time_txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="date/time"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/BWPrimaryDark"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind" />

            <TextView
                android:id="@+id/wind_text_txt_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Speed: 1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure" />

            <TextView
                android:id="@+id/pressure_text_txt_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1010 hpa" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/humidity_text_txt_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100 %" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/find_city_etxt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_city_name_hint"
            android:inputType="text"
            android:singleLine="true" />

        <Button
            android:id="@+id/search_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_btn_txt" />

    </LinearLayout>

</LinearLayout>